--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ body {
 
 .title-gp {
   margin: 0 150px 100px;
+  max-width: 1100px;
+  padding: 0 24px;
 }
 
 .header-group {
@@ -25,7 +27,7 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 0;
+  padding: 20px 0;
 }
 
 ul {
@@ -33,7 +35,6 @@ ul {
   flex-direction: row;
   list-style-type: none;
   gap: 10px;
-  margin-right: 20px;
 }
 
 a {
@@ -53,6 +54,7 @@ a {
   flex-direction: column;
   flex: 1;
   max-width: 50%;
+  gap: 15px;
 }
 
 .intro-and-image {
@@ -113,12 +115,18 @@ img {
 .subtext {
   font-size: 18px;
   font-weight: bold;
+
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .quote-part {
   background: #eee;
-  width: 100%;
-  height: 100px;
   padding: 60px;
   margin: 50px 0;
 }
@@ -153,7 +161,7 @@ img {
 .final-part {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   margin-left: 25px;
   padding: 10px;
   height: 30px;
@@ -186,10 +194,6 @@ img {
 }
 
 .footer {
-  position: static;
-  bottom: 0;
-  left: 0;
-  right: 0;
   display: flex;
   align-items: center;
   justify-content: center;
